Update local development instructions (#20)